new world order!

--- a/references.bib
+++ b/references.bib
@@ -1,8 +1,123 @@
-@incollection{ITF2019,
-author = {{International Transportation Forum}},
-doi = {10.1787/c013afc7-en},
-month = {may},
-publisher = {OECD Library},
-title = {{ITF Transport Outlook 2019 (Summary in English)}},
-year = {2019}
+% See BibTeX: http://www.bibtex.org/
+
+@techreport{Brown2020,
+  author          = {Brown, Austin and Fleming, Kelly and Lipman, Timothy},
+  doi             = {10.7922/G2222S1B},
+  file            = {:home/ttu/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Unknown - 2020 - UC Office of the President ITS reports Title Carbon Neutrality Study 1Driving California'sTransportation Emissions to Z.pdf:pdf},
+  institution     = {UC Office of the President},
+  keywords        = {Transportation},
+  mendeley-groups = {Thesis,Thesis/Background,ECON550/paper},
+  mendeley-tags   = {Transportation},
+  pages           = {147},
+  title           = {{Carbon Neutrality Study 1: Driving California's Transportation Emissions to Zero}},
+  url             = {https://escholarship.org/uc/item/5zb1238j},
+  year            = {2020}
+}
+
+
+@misc{SacramentoRegionalTransit,
+  author          = {{Sacramento Regional Transit}},
+  mendeley-groups = {Thesis/Background},
+  title           = {{SmaRT Ride now operates in nine service areas – Sacramento Regional Transit District}},
+  url             = {https://www.sacrt.com/apps/smart-ride/},
+  urldate         = {2020-12-03}
+}
+
+@techreport{Hsu2019,
+  author      = {Hsu, Wei},
+  file        = {:home/ttu/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Hsu - 2019 - DISPARITIES IN PUBLIC CHARGING INFRASTRUCTURE DEPLOYMENT AND INEQUITABLE ELECTRIC VEHICLE OWNERSHIP COST BASED ON INCOME AN.pdf:pdf},
+  institution = {Humboldt State University},
+  title       = {{DISPARITIES IN PUBLIC CHARGING INFRASTRUCTURE DEPLOYMENT AND INEQUITABLE ELECTRIC VEHICLE OWNERSHIP COST BASED ON INCOME AND RACE}},
+  year        = {2019}
+}
+
+@article{Sheppard2019,
+  abstract  = {As the transportation sector undergoes three major transformations-electrification, shared/on-demand mobility, and automation-there are new challenges to analyzing the impacts of these trends on both the transportation system and the power sector. Most models that analyze the requirements of fleets of shared autonomous electric vehicles (SAEVs) operate at the scale of an urban region, or smaller. A quadratically constrained, quadratic programming problem is formulated, designed to model the requirements of SAEVs at a national scale. The size of the SAEV fleet, the necessary charging infrastructure , the fleet charging schedule, and the dispatch required to serve demand for trips in a region are treated as decision variables. By minimizing both the amortized cost of the fleet and chargers as well as the operational costs of charging, it is possible to explore the coupled interactions between system design and operation. To apply the model at a national scale, key complications about fleet operations are simplified; but a detailed agent-based regional simulation model to parameterize those simplifications is leveraged. Preliminary results are presented, finding that all mobility in the United States (U.S.) currently served by 276 million personally owned vehicles could be served by 12.5 million SAEVs at a cost of {\$} 0.27/vehicle-mile or {\$} 0.18/passenger-mile. The energy requirements for this fleet would be 1142 GWh/day (8.5{\%} of 2017 U.S. electricity demand) and the peak charging load 76.7 GW (11{\%} of U.S. power peak). Several model sensitivities are explored, and it is found that sharing is a key factor in the analysis.},
+  author    = {Sheppard, Colin J R and Bauer, Gordon S and Gerke, Brian F and Greenblatt, Jeffery B and Jenn, Alan T and Gopal, Anand R},
+  doi       = {10.1177/0361198119838270},
+  file      = {:home/ttu/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Sheppard et al. - 2019 - Network Operations and Congestion Joint Optimization Scheme for the Planning and Operations of Shared Autono(2).pdf:pdf},
+  journal   = {Transportation Research Record},
+  number    = {6},
+  pages     = {579--597},
+  publisher = {Transportation Research Board},
+  title     = {{Network Operations and Congestion Joint Optimization Scheme for the Planning and Operations of Shared Autonomous Electric Vehicle Fleets Serving Mobility on Demand}},
+  volume    = {2673},
+  year      = {2019}
+}
+
+@misc{DepartmentofTransportation2020,
+  author          = {{Department of Transportation}},
+  mendeley-groups = {Thesis/Background},
+  title           = {{Demand Response Service Explained | FTA}},
+  url             = {https://www.transit.dot.gov/regulations-and-guidance/access/charter-bus-service/demand-response-service-explained},
+  urldate         = {2020-12-03},
+  year            = {2020}
+}
+
+@misc{Shirkant2019,
+  abstract        = {Only 19 percent of Americans in rural areas use ride-hailing apps. },
+  author          = {Shirkant, Aditi},
+  booktitle       = {Vox},
+  mendeley-groups = {Thesis/Background},
+  month           = {jan},
+  title           = {{Uber and Lyft are not as popular in rural America as they are in cities - Vox}},
+  url             = {https://www.vox.com/the-goods/2019/1/11/18179036/uber-lyft-rural-areas-subscription-model},
+  urldate         = {2020-12-03},
+  year            = {2019}
+}
+
+
+@misc{Hawkins2019,
+  author          = {Hawkins, Andrew},
+  booktitle       = {The Verge},
+  mendeley-groups = {Thesis/Background,ECON550,ECON550/paper},
+  title           = {{Uber lost over $5 billion in one quarter, but don't worry, it gets worse - The Verge}},
+  url             = {https://www.theverge.com/2019/8/8/20793793/uber-5-billion-quarter-loss-profit-lyft-traffic-2019},
+  urldate         = {2020-11-22},
+  year            = {2019}
+}
+
+@techreport{Laws,
+  abstract    = {Local-authority-administered Demand Responsive Transport (DRT) schemes are increasingly prevalent in England and Wales, partly as a result of the growth in the availability of government funding. However, insufficient research has been undertaken into the nature of these schemes and their performance, making it difficult to predict their future role. In this respect, a survey was undertaken to collect data on the background, operation, and performance of DRT schemes in England and Wales.$\backslash$r$\backslash$n$\backslash$r$\backslash$nIt found that DRT schemes are often designed in an attempt to tackle social problems caused by poor accessibility and that they took time to become established, to achieve their objectives, and to reach an acceptable performance in terms of subsidy level. The paper concludes that local-authority-led DRT schemes have a role to play, but that lessons learned from schemes currently in operation must be heeded by those contemplating new scheme development.},
+  author      = {Laws, Rebecca and Enoch, Marcus and Ison, Stephen and Potter, Stephen},
+  booktitle   = {Journal of Public Transportation},
+  doi         = {10.5038/2375-0901.12.1.2},
+  file        = {:home/ttu/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Laws et al. - Unknown - Demand Responsive Transport A Review of Schemes in England and Wales.pdf:pdf},
+  institution = {Journal of Public Transportation},
+  issn        = {1077-291X},
+  number      = {1},
+  pages       = {19--37},
+  title       = {{Demand Responsive Transport: A Review of Schemes in England and Wales}},
+  volume      = {12},
+  year        = {2009}
+}
+
+@techreport{Evans2013,
+  abstract        = {Agent-based modeling and simulation (ABMS) methods have been applied in a spectrum of research domains. This primer focuses on ABMS in the transportation interdisciplinary domain, describes the basic concepts of ABMS and the recent progress of ABMS in transportation areas, and elaborates on the scope and key characteristics of past agent-based transportation models, based on research results that have been reported in the literature. Specifically, the objectives of this primer are to explain the basic concept of ABMS and various ABMS methodologies scoped in the literature, review ABMS applications emerging in transportation studies in the last few decades, describe the general ABMS modeling frameworks and commonly shared procedures exhibited in a variety of transportation applications, outline the strength and limitation of ABMS in various transportation applications, and demonstrate that ABMS exhibits certain comparable modeling outcomes compared to classical approaches through a traveler's route choice decisionmaking process example. The target audiences of this primer are researchers and practitioners in the interdisciplinary fields of transportation, who are specialized or interested in social science models, behavioral models, activity-based travel demand models, lane use models, route choice models, human factors, and artificial intelligence with applications in transportation. The Federal Highway Administration (FHWA) provides high-quality information to serve Government, industry, and the public in a manner that promotes public understanding. Standards and policies are used to ensure and maximize the quality, objectivity, utility, and integrity of its information. FHWA periodically reviews quality issues and adjusts its programs and processes to ensure continuous quality improvement.},
+  author          = {Evans, Monique R},
+  file            = {:home/ttu/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Evans - Unknown - Foreword and Innovation Management Quality Assurance Statement.pdf:pdf},
+  institution     = {US Department of Transportation},
+  mendeley-groups = {Thesis},
+  title           = {{A Primer for Agent-Based Simulation and Modeling in Transportation Applications}},
+  year            = {2013}
+}
+
+@misc{NREL2017,
+  abstract        = {Transportation Secure Data Center. (2017). National Renewable Energy Laboratory. Accessed January 15, 2014: www.nrel.gov/tsdc},
+  author          = {NREL},
+  booktitle       = {Transportation Research Procedia},
+  mendeley-groups = {ECON550,ECON550/paper},
+  title           = {{Transportation Secure Data Center}},
+  url             = {https://www.nrel.gov/transportation/secure-transportation-data/tsdc-california-travel-survey.html},
+  urldate         = {2020-11-21},
+  year            = {2017}
+}
+
+@misc{FederalTransitAdministration2020,
+  author          = {{Federal Transit Administration}},
+  mendeley-groups = {Thesis/Background},
+  title           = {{The National Transit Database (NTD) | FTA}},
+  url             = {https://www.transit.dot.gov/ntd},
+  urldate         = {2020-12-03},
+  year            = {2020}
 }
