--- a/references.bib
+++ b/references.bib
@@ -147,3 +147,11 @@ title = {{Uber Was Designed to Exploit Drivers}},
 url = {https://www.vice.com/en/article/3k3kdn/uber-was-designed-to-exploit-drivers},
 urldate = {2021-02-10}
 }
+
+@misc{Galloway,
+author = {Galloway, Scott and Swisher, Kara},
+mendeley-groups = {Thesis/Background},
+title = {{Can Amazon, Uber, and Lyft All Thrive After the Coronavirus?}},
+url = {https://nymag.com/intelligencer/2020/05/can-amazon-uber-and-lyft-all-thrive-after-the-coronavirus.html},
+urldate = {2021-02-10}
+}
