--- a/references.bib
+++ b/references.bib
@@ -132,26 +132,57 @@
 }
 
 @misc{NewYorkTimes,
-author = {{New York Times}},
-mendeley-groups = {Thesis/Background},
-title = {{How Uber Uses Psychological Tricks to Push Its Drivers' Buttons - The New York Times}},
-url = {https://www.nytimes.com/interactive/2017/04/02/technology/uber-drivers-psychological-tricks.html},
-urldate = {2021-02-10}
+  author          = {{New York Times}},
+  mendeley-groups = {Thesis/Background},
+  title           = {{How Uber Uses Psychological Tricks to Push Its Drivers' Buttons - The New York Times}},
+  url             = {https://www.nytimes.com/interactive/2017/04/02/technology/uber-drivers-psychological-tricks.html},
+  urldate         = {2021-02-10}
 }
 
 @misc{Rao,
-author = {Rao, Ankita},
-booktitle = {Vice},
-mendeley-groups = {Thesis/Background},
-title = {{Uber Was Designed to Exploit Drivers}},
-url = {https://www.vice.com/en/article/3k3kdn/uber-was-designed-to-exploit-drivers},
-urldate = {2021-02-10}
+  author          = {Rao, Ankita},
+  booktitle       = {Vice},
+  mendeley-groups = {Thesis/Background},
+  title           = {{Uber Was Designed to Exploit Drivers}},
+  url             = {https://www.vice.com/en/article/3k3kdn/uber-was-designed-to-exploit-drivers},
+  urldate         = {2021-02-10}
 }
 
 @misc{Galloway,
-author = {Galloway, Scott and Swisher, Kara},
-mendeley-groups = {Thesis/Background},
-title = {{Can Amazon, Uber, and Lyft All Thrive After the Coronavirus?}},
-url = {https://nymag.com/intelligencer/2020/05/can-amazon-uber-and-lyft-all-thrive-after-the-coronavirus.html},
-urldate = {2021-02-10}
+  author          = {Galloway, Scott and Swisher, Kara},
+  mendeley-groups = {Thesis/Background},
+  title           = {{Can Amazon, Uber, and Lyft All Thrive After the Coronavirus?}},
+  url             = {https://nymag.com/intelligencer/2020/05/can-amazon-uber-and-lyft-all-thrive-after-the-coronavirus.html},
+  urldate         = {2021-02-10}
+}
+
+@techreport{Horni,
+  author = {Horni, Andreas and Nagel, Kai and Axhausen, Kay W},
+  file   = {:home/ttu/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Horni, Nagel, Axhausen - Unknown - The Multi-Agent Transport Simulation MATSim edited by.pdf:pdf},
+  title  = {{The Multi-Agent Transport Simulation MATSim edited by}}
+}
+
+@inproceedings{Kagho2020,
+  abstract        = {Agent-Based models have come to be known as powerful techniques for solving complex questions that arise from understanding human behavior. In this paper, we present an overview of agent-based models and its application to the field of transport planning, discuss the challenges needed to be overcome for the further growth of agent-based modeling in the field of transport.},
+  author          = {Kagho, Grace O. and Balac, Milos and Axhausen, Kay W.},
+  booktitle       = {Procedia Computer Science},
+  doi             = {10.1016/j.procs.2020.03.164},
+  file            = {:home/ttu/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Kagho, Balac, Axhausen - 2020 - Agent-Based Models in Transport Planning Current State, Issues, Expectations.pdf:pdf},
+  issn            = {18770509},
+  keywords        = {Agent-Based Models,Transport Planning,Travel Behavior},
+  mendeley-groups = {Thesis/Background},
+  pages           = {726--732},
+  publisher       = {Elsevier B.V.},
+  title           = {{Agent-Based Models in Transport Planning: Current State, Issues, Expectations}},
+  url             = {www.sciencedirect.comwww.sciencedirect.comwww.elsevier.com/locate/procedia},
+  volume          = {170},
+  year            = {2020}
+}
+
+@misc{BEAM,
+  author          = {LBNL},
+  mendeley-groups = {Thesis/Background},
+  title           = {{BEAM - the Modeling Framework for Behavior, Energy, Autonomy, and Mobility}},
+  url             = {https://beam.lbl.gov/},
+  urldate         = {2021-03-31}
 }
