sync for laptop

--- a/references.bib
+++ b/references.bib
@@ -186,3 +186,18 @@
   url             = {https://beam.lbl.gov/},
   urldate         = {2021-03-31}
 }
+
+@incollection{Shaheen2020,
+  abstract        = {The growth of shared mobility services and enabling technologies, such as smartphone apps, is contributing to the commodification and aggregation of transportation services. This chapter reviews terms and definitions related to Mobility on Demand (MOD) and Mobility as a Service (MaaS), the mobility marketplace, stakeholders, and enablers. This chapter also reviews the U.S. Department of Transportation's MOD Sandbox Program, including common opportunities and challenges, partnerships, and case studies for employing on-demand mobility pilots and programs. The chapter concludes with a discussion of vehicle automation and on-demand mobility including pilot projects and the potential transformative impacts of shared automated vehicles on parking, land use, and the built environment.},
+  author          = {Shaheen, Susan and Cohen, Adam},
+  booktitle       = {Analytics for the Sharing Economy: Mathematics, Engineering and Business Perspectives},
+  doi             = {10.1007/978-3-030-35032-1_14},
+  isbn            = {9783030350321},
+  keywords        = {Automated driving systems,Automated vehicles,Automation,Mobility as a service,Mobility on demand,Shared automated vehicles,Shared mobility},
+  mendeley-groups = {Thesis/Background},
+  month           = {jan},
+  pages           = {227--254},
+  publisher       = {Springer International Publishing},
+  title           = {{Mobility on demand in the United States}},
+  year            = {2020}
+}
